fix: countdown spacing

--- a/source/assets/styles/countdown.scss
+++ b/source/assets/styles/countdown.scss
@@ -3,3 +3,8 @@
     // font-style: italic;
     // margin-bottom:var(--pad);
 }
+
+.countdown{
+    margin:0;
+    padding:0;
+}
